finalise the multi upload feature

--- a/assets/media_library.backend.css
+++ b/assets/media_library.backend.css
@@ -15,25 +15,6 @@
 /*
  *	The upload area
  */
-/*#drop_zone {
-  width: 100%;
-  min-height: 100px;
-  height: 100px;
-  border: 5px red dashed;
-  text-align: center;
-  font-size: 25px;
-}
-
-#drop_zone.highlightDropArea {
-  border: 5px blue dashed;
-}*/
-
-/**
- * Multiple File Upload
- */
-
-/* Icons */
-
 @font-face {
   font-family: 'icons';
   src: url('fonts/icons.eot?92711752');
@@ -45,14 +26,12 @@
   font-style: normal;
 }
 
-/* File list */
-
-.field-multiupload,
-.field-multiupload * {
+.media_library-upload,
+.media_library-upload * {
 	box-sizing: border-box;
 }
 
-.field-multiupload {
+.media_library-upload {
     width: 90%;
     max-width: 400px;
 	height: auto;
@@ -64,32 +43,37 @@
 	transition: all 300ms ease-out;
 }
 
-.field-multiupload.is-active {
+.media_library-upload.is-active {
 	max-height: 400px;
 	padding: 50px 0;
 }
 
-.multiupload-files .instance {
+.media_library-upload button {
+	display: block;
+	margin: 20px auto 0;
+}
+
+.media_library-files .instance {
 	transition: none;
 	white-space: nowrap;
 	overflow: hidden;
 	position: relative;
 	padding: 0 10px;
-	border-top: 1px solid #c4c4c4;
+	border-top: 1px solid #b8b8b8;
 	min-height: 31px;
 }
 
-.multiupload-files .instance:first-of-type {
+.media_library-files .instance:first-of-type {
 	border-top-left-radius: 4px;
 	border-top-right-radius: 4px;
 }
 
-.multiupload-files .queued {
+.media_library-files .queued {
 	background: #fbfbfb;
 	color: #dad6cf;
 }
 
-.multiupload-files a:first-of-type {
+.media_library-files a:first-of-type {
 	border: none !important;
 	margin-top: 0 !important;
 	color: rgba(63, 105, 165, 1) !important;
@@ -97,15 +81,15 @@
 	transition: none;
 }
 
-.multiupload-files .queued a:first-of-type {
+.media_library-files .queued a:first-of-type {
 	color: rgba(63, 105, 165, 0.5) !important;
 }
 
-.multiupload-files .content {
+.media_library-files .content {
 	display: none;
 }
 
-.multiupload-files header {
+.media_library-files header {
 	-webkit-box-shadow: none !important;
 	box-shadow: none !important;
 	padding: 8px 0 7px;
@@ -113,24 +97,23 @@
 	position: static !important;
 }
 
-.multiupload-files .error {
+.media_library-files .error {
 	border-color: #cc3311 !important;
 	background: #eb6347;
 }
 
-.multiupload-files .error header,
-.multiupload-files .error header a {
+.media_library-files .error header,
+.media_library-files .error header a {
 	color: rgba(255, 255, 255, 0.7);
 }
 
-.multiupload-files .error a,
-.multiupload-files .error code {
+.media_library-files .error a,
+.media_library-files .error code {
 	color: #fff;
 }
 
 /* Duplicator */
-
-.multiupload-drop {
+.media_library-drop {
 	padding-bottom: 0;
 	margin-top: -12px;
 	margin-bottom: 0;
@@ -140,32 +123,31 @@
 	border-bottom-right-radius: 0 !important;
 }
 
-.multiupload-drop.empty {
+.media_library-drop.empty {
 	height: 0;
 	border: 0;
 }
 
-.multiupload-drop ol {
+.media_library-drop ol {
 	margin: 0;
-	border-left: 1px solid #c4c4c4;
-	border-right: 1px solid #c4c4c4;
+	border-left: 1px solid #b8b8b8;
+	border-right: 1px solid #b8b8b8;
 	border-radius: 4px 4px 0 0;
 }
 
-.multiupload-drop.empty ol {
+.media_library-drop.empty ol {
 	border: none;
 	min-height: 0;
 	margin: 0 1px;
 }
 
-.multiupload-drop li:last-of-type {
+.media_library-drop li:last-of-type {
 	border-bottom-left-radius: 0 !important;
 	border-bottom-right-radius: 0 !important;
 }
 
 /* Progress bar */
-
-.multiupload-progress {
+.media_library-progress {
 	position: absolute;
 	bottom: -1px;
 	left: -10px;
@@ -179,13 +161,12 @@
 	z-index: 10000;
 }
 
-.queued .multiupload-progress {
+.queued .media_library-progress {
 	opacity: 1;
 }
 
 /* Destructor */
-
-.multiupload-files .destructor {
+.media_library-files .destructor {
 	background-color: #f5f5f5;
 	top: 0 !important;
 	right: 0 !important;
@@ -197,7 +178,7 @@
 	position: absolute;
 }
 
-.multiupload-files .destructor::before {
+.media_library-files .destructor::before {
 	content: '';
 	display: block;
 	width: 22px;
@@ -212,12 +193,12 @@
 	background-image:         linear-gradient(left, rgba(245, 245, 245, 0) 0%, rgba(245, 245, 245, 1) 80%);
 }
 
-.multiupload-files .queued .destructor {
+.media_library-files .queued .destructor {
 	position: absolute;
 	background-color: #fbfbfb;
 }
 
-.multiupload-files .queued .destructor::before {
+.media_library-files .queued .destructor::before {
 	background-image: -webkit-linear-gradient(left, rgba(251, 251, 251, 0) 0%, rgba(251, 251, 251, 1) 80%);
 	background-image:    -moz-linear-gradient(left, rgba(251, 251, 251, 0) 0%, rgba(251, 251, 251, 1) 80%);
 	background-image:     -ms-linear-gradient(left, rgba(251, 251, 251, 0) 0%, rgba(251, 251, 251, 1) 80%);
@@ -225,7 +206,7 @@
 	background-image:         linear-gradient(left, rgba(251, 251, 251, 0) 0%, rgba(251, 251, 251, 1) 80%);
 }
 
-.multiupload-files .error .destructor {
+.media_library-files .error .destructor {
 	color: rgba(255, 255, 255, 0.7) !important;
 	background: #eb6347;
 	-webkit-transition: none;
@@ -233,11 +214,11 @@
 	transition: none;
 }
 
-.multiupload-files .error .destructor:hover {
+.media_library-files .error .destructor:hover {
 	color: #fff !important;
 }
 
-.multiupload-files .error .destructor::before {
+.media_library-files .error .destructor::before {
 	background-image: -webkit-linear-gradient(left, rgba(235, 99, 71, 0) 0%, rgba(235, 99, 71, 1) 80%);
 	background-image:    -moz-linear-gradient(left, rgba(235, 99, 71, 0) 0%, rgba(235, 99, 71, 1) 80%);
 	background-image:     -ms-linear-gradient(left, rgba(235, 99, 71, 0) 0%, rgba(235, 99, 71, 1) 80%);
@@ -246,12 +227,10 @@
 }
 
 /* Drop area */
-
-.multiupload-droparea {
+.media_library-droparea {
 	background: #fff;
 	border: 1px solid #b8b8b8;
 	border-top-width: 0;
-	/*border-radius: 4px;*/
 	border-bottom-left-radius: 4px;
 	border-bottom-right-radius: 4px;
 	/*box-shadow: 0 1px 2px #e5e5e5;*/
@@ -259,13 +238,13 @@
 	padding: 20px;
 	color: #b8b8b8;
 }
-.multiupload-drop.empty + .multiupload-droparea {
+.media_library-drop.empty + .media_library-droparea {
 	border-top-left-radius: 4px;
 	border-top-right-radius: 4px;
 	border-top-width: 1px;
 }
 
-.multiupload-droparea span {
+.media_library-droparea span {
 	text-transform: uppercase;
 	letter-spacing: 0.1em;
 	display: block;
@@ -273,7 +252,7 @@
 	pointer-event: none;
 }
 
-.multiupload-droparea span::before {
+.media_library-droparea span::before {
 	font-family: icons;
 	font-size: 40px;
 	color: rgba(0, 0, 0, 0.1);
@@ -281,25 +260,25 @@
 	display: block;
 	line-height: 1;
 }
-.multiupload-droparea.multiupload-drag span::before {
+.media_library-droparea.media_library-drag span::before {
 	color: rgba(0, 0, 0, 0.25);
 }
 
 /* Fallback */
 
-.multiupload-fallback {
+.media_library-fallback {
 	padding: 5px 10px !important;
 }
 
 /* Ordering */
 
-.multiupload-files .ordering a {
+.media_library-files .ordering a {
 	color: #FFF !important;
 }
 
-.multiupload-files .ordering .destructor,
-.multiupload-files .ordering .destructor::before,
-.multiupload-files .ordering .frame-header {
+.media_library-files .ordering .destructor,
+.media_library-files .ordering .destructor::before,
+.media_library-files .ordering .frame-header {
 	background: transparent;
 }
 
