--- a/assets/media_library.backend.css
+++ b/assets/media_library.backend.css
@@ -1,5 +1,4 @@
 .media-library {
-	height: calc(100vh - 200px);
 	padding: 1rem 1.8rem 0;
 }
 
@@ -25,10 +24,6 @@
 	position: relative;
 	top: 0.5rem;
 }
-
-/*#content-extension-media_-library-library .media-library-direct {
-	display: none;
-}*/
 
 /*
  *	The upload area
@@ -300,11 +295,6 @@
 	background: transparent;
 }
 
-
-
-
-
-
 /*
  *	no Uploads directory message
  */
@@ -568,3 +558,96 @@
 	color: #e90a20;
 }
 /* @end */
+
+/*
+ *	Content lightbox
+ */
+.ml-lightbox {
+	width: 100%;
+	height: 100%;
+	background-color: rgba(34, 34, 34, 0.7);
+	opacity: 0;
+
+	position: fixed;
+	top: 0;
+	left: 0;
+	z-index: 99991;
+
+	transition: opacity 200ms ease-out;
+}
+
+.ml-lightbox:before,
+.ml-lightbox:after {
+	display: block;
+	content: '';
+	width: 30px;
+	height: 2px;
+	margin-top: -30px;
+	background-color: #fff;
+	cursor: pointer;
+	opacity: 0;
+
+	position: absolute;
+	top: 10%;
+	left: 50%;
+
+	transition: opacity 200ms ease-out 200ms;
+}
+
+
+.ml-lightbox:before {
+	transform: translate(-50%, -50%) rotate(-45deg);
+}
+
+.ml-lightbox:after {
+	transform: translate(-50%, -50%) rotate(45deg);
+}
+
+.ml-lightbox-content {
+	width: 90%;
+	max-width: 1024px;
+	height: 80%;
+	background: #fff url('icons/loader.svg') no-repeat 50% 50% / 30px 30px;
+	overflow: auto;
+
+	position: absolute;
+	top: 10%;
+	left: 50%;
+	transform: translate(-50%, 5%);
+
+	transition: transform 200ms ease-out;
+}
+
+.ml-lightbox #contents {
+	min-height: auto;
+}
+
+.ml-lightbox.is-visible {
+	opacity: 1;
+}
+
+.ml-lightbox.is-visible:before,
+.ml-lightbox.is-visible:after {
+	opacity: 1;
+}
+
+.ml-lightbox.is-visible .ml-lightbox-content {
+	background: #fff;
+	transform: translate(-50%, -0%);
+}
+
+.ml-lightbox.is-visible .ml-lightbox-content.show-loader {
+	background: #fff url('icons/loader.svg') no-repeat 50% 50% / 30px 30px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
