--- a/assets/media_library.backend.css
+++ b/assets/media_library.backend.css
@@ -229,13 +229,13 @@ form.media-library {
 }
 
 /* Drop area */
-.media_library-droparea {
+/*.media_library-droparea {
 	background: #fff;
 	border: 1px solid #b8b8b8;
 	border-top-width: 0;
 	border-bottom-left-radius: 4px;
 	border-bottom-right-radius: 4px;
-	/*box-shadow: 0 1px 2px #e5e5e5;*/
+	/!*box-shadow: 0 1px 2px #e5e5e5;*!/
 	text-align: center;
 	padding: 20px;
 	color: #b8b8b8;
@@ -264,7 +264,7 @@ form.media-library {
 }
 .media_library-droparea.media_library-drag span::before {
 	color: rgba(0, 0, 0, 0.25);
-}
+}*/
 
 /* Fallback */
 
