reduce height of 'other' type in Primary column

--- a/assets/media_library.field.css
+++ b/assets/media_library.field.css
@@ -66,7 +66,7 @@
 	height: 50px;
 }
 
-.primary .field-medialibraryfield .item {
+.primary .field-medialibraryfield .item:not(.other) {
 	height: 100px;
 }
 
