--- a/assets/media_library.backend.css
+++ b/assets/media_library.backend.css
@@ -34,10 +34,7 @@ form.media-library {
 }
 
 .media_library-upload {
-    width: 90%;
-    max-width: 400px;
-	height: auto;
-	max-height: 0px;
+	height: 0;
     margin: 0 auto;
     padding: 0;
 	overflow: auto;
@@ -46,7 +43,7 @@ form.media-library {
 }
 
 .media_library-upload.is-active {
-	max-height: 400px;
+	height: 410px;
 	padding: 50px 0;
 }
 
@@ -230,58 +227,96 @@ form.media-library {
 
 /* Drop area */
 .media_library-droparea {
-	background: #fff;
-	border: 1px solid #b8b8b8;
-	border-top-width: 0;
-	border-bottom-left-radius: 4px;
-	border-bottom-right-radius: 4px;
-	/*box-shadow: 0 1px 2px #e5e5e5;*/
-	text-align: center;
-	padding: 20px;
-	color: #b8b8b8;
-}
-.media_library-drop.empty + .media_library-droparea {
-	border-top-left-radius: 4px;
-	border-top-right-radius: 4px;
-	border-top-width: 1px;
+	position: relative;
+    width: 90%;
+    max-width: 400px;
+    margin: 0 auto;
+    overflow: hidden;
 }
 
-.media_library-droparea span {
-	text-transform: uppercase;
-	letter-spacing: 0.1em;
+.media_library-droparea.switch-method .media_library-droparea_column {
+	transform: translateX(-100%);
+}
+
+.media_library-droparea_columns {
+	display: flex;
+    width: 200%;
+}
+
+.media_library-droparea_column {
+	width: 50%;
+    padding: 0 5px;
+
+    transform: translateX(0%);
+
+	transition: transform 250ms ease-out;
+}
+
+.media_library-droparea_toggle {
+	position: relative;
+    display: flex;
+    justify-content: space-between;
+    padding: 0 5px;
+}
+
+.media_library-droparea_toggle label {
+	font-weight: bold;
+	cursor: pointer;
+
+	line-height: 20px;
+}
+
+.media_library-droparea_toggle input,
+.media_library-droparea_toggle span {
 	display: block;
-	color: rgba(0, 0, 0, 0.25);
-	pointer-event: none;
+	width: 35px;
+	height: 20px;
+
+	position: absolute;
+	top: 1px;
+	left: 50%;
+	transform: translateX(-50%);
 }
 
-.media_library-droparea span::before {
+.media_library-droparea_toggle input {
+    width: 35px;
+    height: 20px;
+    margin: 0;
+    padding: 0;
+    opacity: 0;
+    cursor: pointer;
+
+    -webkit-appearance: button;
+    appearance: button;
+
+    z-index: 2;
+}
+
+.media_library-droparea_toggle span {
+	background-color: #f4f4f4;
+	border-radius: 10px;
+	box-shadow: 0 0 0 1px #e6e6e5 inset;
+}
+
+.media_library-droparea_toggle span:after {
 	display: block;
 	content: '';
-	height: 30px;
-	margin-bottom: 5px;
-	background: url('icons/upload.svg') no-repeat 50% 50% / contain;
-	opacity: 0.1;
-}
-.media_library-droparea.media_library-drag span::before {
-	color: rgba(0, 0, 0, 0.25);
-}
+	width: 16px;
+	height: 16px;
+	background-color: rgba(40, 40, 40, 0.8);
+	border-radius: 50%;
 
-/* Fallback */
+	position: absolute;
+	top: 2px;
+	left: 2px;
 
-.media_library-fallback {
-	padding: 5px 10px !important;
-}
+	transform: translateX(0px);
 
-/* Ordering */
-
-.media_library-files .ordering a {
-	color: #FFF !important;
+	transition: transform 250ms ease-out;
 }
 
-.media_library-files .ordering .destructor,
-.media_library-files .ordering .destructor::before,
-.media_library-files .ordering .frame-header {
-	background: transparent;
+.media_library-droparea_toggle input:checked + span:after {
+	transform: translateX(15px);
 }
 
 /*
@@ -496,18 +531,17 @@ form.media-library {
 	display: inline-block;
 	vertical-align: middle;
 	margin-bottom: 0;
-
-	line-height: 30px;
-}
-
-.ml-file .name {
-	width: calc(33% - 55px);
 	overflow: hidden;
 	white-space: nowrap;
 
-	font-weight: bold;
+	line-height: 30px;
 	text-transform: capitalize;
 	text-overflow: ellipsis;
+}
+
+.ml-file .name {
+	width: calc(50% - 60px);
+	font-weight: bold;
 }
 
 .ml-file .name span {
@@ -516,7 +550,7 @@ form.media-library {
 }
 
 .ml-file .size {
-	width: 15%;
+	width: 150px;
 	padding-left: 15px;
 }
 
@@ -526,7 +560,7 @@ form.media-library {
 }
 
 .ml-file a.tags {
-	right: 270px;
+	right: 255px;
 }
 
 .ml-file a.tags[data-tags]:hover:before {
@@ -589,7 +623,7 @@ form.media-library {
 }
 
 .ml-file a.preview {
-	right: 200px;
+	right: 180px;
 }
 
 .ml-file a.copy {
@@ -607,6 +641,72 @@ form.media-library {
 
 .ml-file .meta {
 	display: none;
+}
+
+@media (max-width: 1230px) {
+
+	.ml-file .name {
+		width: calc(40% - 60px);
+	}
+}
+
+@media (max-width: 1024px) {
+
+	.ml-file [class*='icon-'] {
+		height: 20px;
+	}
+
+	.ml-file .name {
+		width: calc(100% - 60px);
+	}
+
+	.ml-file .size {
+		width: auto;
+	}
+
+	.ml-file .name + .size {
+		padding-left: 60px;
+	}
+
+	.ml-file .name + .size:after {
+		content: ', '
+	}
+
+	.ml-file a {
+		top: inherit;
+		bottom: 15px;
+	}
+}
+
+@media (max-width: 570px) {
+
+	.ml-file {
+
+	}
+
+	.ml-file p {
+		line-height: 20px;
+	}
+
+	.ml-file p:not(.name) {
+		display: block;
+		padding-left: 60px;
+	}
+
+	.ml-file a:first-of-type {
+		margin-left: 60px;
+	}
+
+	.ml-file a {
+		position: static;
+		display: inline-block;
+		margin-top: 10px;
+	}
+
+	.ml-file a:after {
+		display: inline-block;
+		content: ', ';
+	}
 }
 /* @end */
 
@@ -656,7 +756,7 @@ form.media-library {
 
 .ml-lightbox-content {
 	width: 90%;
-	max-width: 1024px;
+	/*max-width: 1024px;*/
 	height: 80%;
 	background: #fff url('icons/loader.svg') no-repeat 50% 50% / 30px 30px;
 	overflow: auto;
@@ -691,14 +791,12 @@ form.media-library {
 	background: #fff url('icons/loader.svg') no-repeat 50% 50% / 30px 30px;
 }
 
+/* Some Symphony styles override FilePond. These are fixes. */
+.filepond--file-action-button.filepond--file-action-button {
+	min-height: 0;
+}
 
-
-
-
-
-
-
-
-
-
-
+.filepond--file .filepond--processing-complete-indicator[data-align*='right'] {
+	top: 0;
+	right: 0;
+}
