--- a/assets/media_library.backend.css
+++ b/assets/media_library.backend.css
@@ -1,3 +1,8 @@
+/* Symphony override */
+.field-medialibraryfield .column ul.tags {
+	margin-bottom: 0;
+}
+
 form.media-library {
 	padding: 1rem 1.8rem 0;
 }
